--- a/src/index.css
+++ b/src/index.css
@@ -71,6 +71,20 @@ h6 {
 #__next {
   isolation: isolate;
 }
+h2 {
+  font-weight: 600;
+  margin-bottom: 32px;
+  width: fit-content;
+}
+h3 {
+  font-weight: 500;
+  font-size: 1.25rem;
+  width: fit-content;
+}
+h4 {
+  font-weight:  500;
+  font-size: 1.1rem;
+}
 :root {
   --shadow-color: 0deg 0% 63%;
   --shadow-elevation-low: 0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.34),
